Fix issues in styling, part 3
Seems like I forgot to add in the comma in the webkit tracks and thumbs of the scrollbars.

--- a/Transcyclopedia/sanfrancisco/bus/css_assets/responsiveness_and_scrollbars.css
+++ b/Transcyclopedia/sanfrancisco/bus/css_assets/responsiveness_and_scrollbars.css
@@ -179,7 +179,7 @@
     right: 20px;
 }
 
-.alerts_stop_bus::-webkit-scrollbar-track .alert_entity_routes::-webkit-scrollbar-track {
+.alerts_stop_bus::-webkit-scrollbar-track, .alert_entity_routes::-webkit-scrollbar-track {
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -203,7 +203,7 @@
     right: 2px;
 }
 
-.alerts_stop_bus::-webkit-scrollbar-thumb .alert_entity_routes::-webkit-scrollbar-thumb {
+.alerts_stop_bus::-webkit-scrollbar-thumb, .alert_entity_routes::-webkit-scrollbar-thumb {
     border: 1px solid rgba(255, 255, 255, 0.18);
     background: rgba(255, 255, 255, 0.25);
     border-radius: 10px;
